; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/mediatek/files-4.19/drivers/net/phy/mtk/mt753x/extr_mt7530.c_mt7530_sw_post_init.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/mediatek/files-4.19/drivers/net/phy/mtk/mt753x/extr_mt7530.c_mt7530_sw_post_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gsw_mt753x = type { i32 (%struct.gsw_mt753x*, i32, i32, i32)*, i32 (%struct.gsw_mt753x*, i32, i32)* }

@MT753X_NUM_PHYS = common dso_local global i32 0, align 4
@MII_BMCR = common dso_local global i32 0, align 4
@BMCR_PDOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gsw_mt753x*)* @mt7530_sw_post_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mt7530_sw_post_init(%struct.gsw_mt753x* %0) #0 {
  %2 = alloca %struct.gsw_mt753x*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.gsw_mt753x* %0, %struct.gsw_mt753x** %2, align 8
  %5 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %2, align 8
  %6 = call i32 @mt7530_phy_setting(%struct.gsw_mt753x* %5)
  store i32 0, i32* %3, align 4
  br label %7

7:                                                ; preds = %31, %1
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @MT753X_NUM_PHYS, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %34

11:                                               ; preds = %7
  %12 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %2, align 8
  %13 = getelementptr inbounds %struct.gsw_mt753x, %struct.gsw_mt753x* %12, i32 0, i32 1
  %14 = load i32 (%struct.gsw_mt753x*, i32, i32)*, i32 (%struct.gsw_mt753x*, i32, i32)** %13, align 8
  %15 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %2, align 8
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @MII_BMCR, align 4
  %18 = call i32 %14(%struct.gsw_mt753x* %15, i32 %16, i32 %17)
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* @BMCR_PDOWN, align 4
  %20 = xor i32 %19, -1
  %21 = load i32, i32* %4, align 4
  %22 = and i32 %21, %20
  store i32 %22, i32* %4, align 4
  %23 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %2, align 8
  %24 = getelementptr inbounds %struct.gsw_mt753x, %struct.gsw_mt753x* %23, i32 0, i32 0
  %25 = load i32 (%struct.gsw_mt753x*, i32, i32, i32)*, i32 (%struct.gsw_mt753x*, i32, i32, i32)** %24, align 8
  %26 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %2, align 8
  %27 = load i32, i32* %3, align 4
  %28 = load i32, i32* @MII_BMCR, align 4
  %29 = load i32, i32* %4, align 4
  %30 = call i32 %25(%struct.gsw_mt753x* %26, i32 %27, i32 %28, i32 %29)
  br label %31

31:                                               ; preds = %11
  %32 = load i32, i32* %3, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %3, align 4
  br label %7

34:                                               ; preds = %7
  ret i32 0
}

declare dso_local i32 @mt7530_phy_setting(%struct.gsw_mt753x*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
